            (xrange does not support long / large numbers).
* Bug fix:  svwar was truncating extension names containing certain characters. Fixed.
* Cosmetic: Certain PBXs reply with "603 Declined" when svwar finds that the
            extension does not exist. This creates extra noise. It is now being
	    suppressed.

v0.2
General:
* Feature: replaced 3rd party functions in ip4range with our functions in helper.py
* Feature: ReportBack function is off by default but can be enabled by using -R option
* Feature: verbose and quiet mode. Now making use of logging module
* Newtool: svreport - export to csv, pdf, xml and plain text. 
* Feature: session / database support. This allows two things:
	- resuming of previous scans
	- exporting the results to more meaningful formats
* Feature: give a warning when the default port is already being used and listen on another port


Svmap:
* Feature: Host arguments now accepts a variety of formats. You can now scan using ranges like the following:
	- 1.1.1.1-20 1.1.1-20.1-10
	- 1.1.1.*
	- 1.1.1.1-1.1.2.20
	- sipvicious.org/22
* Bug fix: Generation of hosts to scan is now dynamic and does not slow down startup time
* Feature: Now making use of the standard logging module with more logging to debug problems
* Feature: When the port is already bound, svmap tries to listen on another port
* Feature: Added options to allow you to specify the ip to bind to as well as the external ip address of the scanner
* Feature: --help now shows proper usage
* Feature: New scanning method - random scan! This scans only valid internet address space.
* Feature: Randomize scan. Allows you to randomize the order of the IP addresses to be scanned. 

Svwar:
* Bug fix: Svwar was missing valid extensions (false negatives) - fixed
* Bug fix: Logic bug which did not identify between a server that does not respond and one that sends an unexpected response.
* Bug fix: Fixed description of errors and usage

Svcrack: